# polyalign

./: .gitignore  README.md  genome-polyalign.fasta.ndb  genome-polyalign.fasta.nhr  genome-polyalign.fasta.nin  pyproject.toml  setup.cfg  test.sh  time.sh
src/polyalign/: __init__.py  __main__.py  polyalign.py
